# pytorch-model-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
model/: inference.py  model.pth  model.py  train.py
model/dataset/: data.csv  gen_data.py
serve/: handler.py  log4j2.xml  model.mar
