[tool.poetry]
name = "pytorch-model-tutorial"
version = "0.1.0"
description = ""
authors = ["Stephen Stack <sfstack7500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
torchserve = "^0.10.0"
torch-model-archiver = "^0.10.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
